# datafusion-geo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: geo_bench.rs  geo_lib.rs  geoarrow.rs  geoarrow_bench.rs  geos_bench.rs  geos_lib.rs  util.rs
scripts/setup/: README.md  pixi.toml
src/: buffer.rs  lib.rs
src/algorithm/: mod.rs  translate.rs
src/array/: geometry.rs  linestring.rs  mixed.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs  util.rs
src/function/: as_ewkt.rs  as_geojson.rs  as_mvt_geom.rs  as_text.rs  boundary.rs  box2d.rs  buffer.rs  covered_by.rs  covers.rs  equals.rs  extent.rs  geom_from_text.rs  geom_from_wkb.rs  geometry_type.rs  intersects.rs  make_envelope.rs  mod.rs  split.rs  srid.rs  translate.rs
src/geo/: array.rs  box.rs  buffer.rs  builder.rs  dialect.rs  index.rs  mod.rs  scalar.rs
src/scalar/: linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs  util.rs
