[package]
name = "datafusion-geo"
version = "0.1.0"
edition = "2021"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "Add geo functionality extension to datafusion query engine."
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-geo"
homepage = "https://github.com/systemxlabs/datafusion-geo"
readme = "README.md"

[features]
geos = ["dep:geos"]

[dependencies]
arrow = "50"
datafusion = "36"
tokio = "1.36"
geo = "0.28"
geos = { version = "8.3", features = ["v3_10_0", "geo"], optional = true }
strum = { version = "0.26", features = ["derive"]}