[package]
name = "datafusion-geo"
version = "0.1.0"
edition = "2021"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "Add geo functionality extension to datafusion query engine."
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-geo"
homepage = "https://github.com/systemxlabs/datafusion-geo"
readme = "README.md"

[features]
geos = ["dep:geos", "geozero/with-geos"]

[dependencies]
arrow-schema = "50"
arrow-array = "50"
arrow-buffer = "50"
datafusion-common = "36"
datafusion-expr = "36"
geo = "0.28"
geos = { version = "8.3", features = ["v3_10_0", "geo"], optional = true }
geozero = { version = "0.12", features = ["with-wkb"] }

[dev-dependencies]
arrow = "50"
datafusion = "36"
tokio = "1.36"