[package]
name = "datafusion-geo"
version = "0.1.0"
edition = "2021"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "Add geo functionality extension to datafusion query engine."
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-geo"
homepage = "https://github.com/systemxlabs/datafusion-geo"
readme = "README.md"

[features]
geos = ["dep:geos", "geozero/with-geos"]

[dependencies]
arrow-schema = "50"
arrow-array = "50"
arrow-buffer = "50"
datafusion-common = "36"
datafusion-expr = "36"
geo = "0.28"
geos = { version = "8.3", features = ["v3_10_0", "geo"], optional = true }
#geozero = { version = "0.12", features = ["with-wkb"] }
geozero = { git = "https://github.com/lewiszlw/geozero.git", rev = "40e33a714b624b90497ec7032ac5be1d9f02aa13", features = ["with-wkb"] }

[dev-dependencies]
arrow = "50"
datafusion = "36"
tokio = { version = "1.36", features = ["full"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git", rev = "0e4473e546248d2c2cbfb44df76d508660761261" }

[[bench]]
name = "geo_bench"
path = "benches/geo_bench.rs"
harness = false

[[bench]]
name = "geos_bench"
path = "benches/geos_bench.rs"
harness = false
required-features = ["geos"]

[[bench]]
name = "geoarrow_bench"
path = "benches/geoarrow_bench.rs"
harness = false
